fix: draft -> lsm vector writing on pages
(cherry picked from commit 0cd8038f3362ed0f25180fbba618c7b83766737d)